--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram.love</title>
     <link rel="stylesheet" href="./style.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
+
 <body>
     <div id="container">
         <img src="./baby.jpg" alt="">
         <i class="ri-heart-3-fill"></i>
+        <p class="p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta omnis eum autem perferendis magnam, ab
+            asperiores animi molestiae perspiciatis.</p>
     </div>
 
     <script src="index.js"></script>
 </body>
+
 </html>
